# lambdaw

./: Cargo.toml  README.md  flake.nix
synth/: Cargo.toml
synth/src/: main.rs  oscillators.rs
