[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cpal = "0.15.2"
clap = "4.3.0"
fundsp = {git = "https://github.com/SamiPerttu/fundsp", branch = "master"}
egui = "0.22.0"
eframe = "0.22.0"
